third draft + fix pom to run tests without encountering reflection errors in both jdk 8 and above.